Fixed project page spill over

--- a/project3Portfolio/css/style.css
+++ b/project3Portfolio/css/style.css
@@ -312,17 +312,28 @@ PROJECT 1 PAGE
 .projectContent {
     grid-area: content;
     justify-content: center;
+    background-color: blue;
+    max-width:100vw;
     margin:0 auto;
+}
+
+.someContent{
+    max-width: 90vw;
+    text-align:center;
+    word-wrap:break-word;
 }
 
 .singleProjectImageCont {
     grid-area: content;
-    background-color: blue;
+    background-color: yellowgreen;
     margin: 0 auto;
 }
 
+
 .singleProjectImage {
-    width: 80vw;
+    width: 60vw;
+    margin: 0 auto;
+    display:block;
 }
 
 
